; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/samuel/extr_keymap.c_mod_lift.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/samuel/extr_keymap.c_mod_lift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@last_mod = common dso_local global i32 0, align 4
@tap_timer = common dso_local global i32 0, align 4
@TAPPING_TERM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mod_lift(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @unregister_code(i32 %7)
  %9 = load i32, i32* @last_mod, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %3
  %13 = load i32, i32* @tap_timer, align 4
  %14 = call i64 @timer_elapsed(i32 %13)
  %15 = load i64, i64* @TAPPING_TERM, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @tap_code16(i32 %18)
  store i32 10, i32* @last_mod, align 4
  br label %20

20:                                               ; preds = %17, %12, %3
  ret void
}

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i64 @timer_elapsed(i32) #1

declare dso_local i32 @tap_code16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
